@@ -15,6 +15,7 @@ import com.buschmais.jqassistant.plugin.common.api.model.DependsOnDescriptor;
 import com.buschmais.jqassistant.plugin.java.api.model.JavaArtifactFileDescriptor;
 import com.buschmais.jqassistant.plugin.java.api.model.PackageDescriptor;
 import com.buschmais.jqassistant.plugin.java.api.model.TypeDependsOnDescriptor;
+import com.buschmais.jqassistant.plugin.java.impl.scanner.ClassFileScannerPlugin;
 import com.buschmais.jqassistant.plugin.java.test.AbstractJavaPluginIT;
 import com.buschmais.jqassistant.plugin.java.test.set.rules.dependency.packages.a.A;
 import com.buschmais.jqassistant.plugin.java.test.set.rules.dependency.packages.b.B;
@@ -39,9 +40,13 @@ import static org.hamcrest.core.IsCollectionContaining.hasItem;
  */
 class DependencyIT extends AbstractJavaPluginIT {
 
+    @Override
+    protected Map<String, Object> getScannerProperties() {
+        return Map.of(ClassFileScannerPlugin.PROPERTY_INCLUDE_LOCAL_VARIABLES, true);
+    }
+
     /**
      * Verifies type dependencies.
-     *
      */
     @Test
     void types() {
@@ -92,9 +97,12 @@ class DependencyIT extends AbstractJavaPluginIT {
     void weight() {
         scanClasses(DependentType.class);
         store.beginTransaction();
-        Map<String, Object> params = MapBuilder.<String, Object> builder().entry("t1", DependentType.class.getName()).entry("t2", LocalVariable.class.getName()).build();
+        Map<String, Object> params = MapBuilder.<String, Object>builder()
+            .entry("t1", DependentType.class.getName())
+            .entry("t2", LocalVariable.class.getName())
+            .build();
         List<Map<String, Object>> rows = query("MATCH (t1:Type)-[d:DEPENDS_ON]->(t2:Type) WHERE t1.fqn=$t1 and t2.fqn=$t2 RETURN d", params).getRows();
-        assertThat(rows.size()).isEqualTo(1);
+        assertThat(rows).hasSize(1);
         Map<String, Object> row = rows.get(0);
         TypeDependsOnDescriptor dependsOn = (TypeDependsOnDescriptor) row.get("d");
         assertThat(dependsOn.getWeight()).isEqualTo(7);
@@ -105,7 +113,7 @@ class DependencyIT extends AbstractJavaPluginIT {
      * Verifies the concept "java:PackageDependency".
      *
      * @throws IOException
-     *             If the test fails.
+     *     If the test fails.
      */
     @Test
     void packages() throws Exception {
@@ -113,17 +121,18 @@ class DependencyIT extends AbstractJavaPluginIT {
         assertThat(applyConcept("java:PackageDependency").getStatus()).isEqualTo(SUCCESS);
         store.beginTransaction();
         Map<String, Object> parameters = new HashMap<>();
-        parameters.put("package", A.class.getPackage().getName());
+        parameters.put("package", A.class.getPackage()
+            .getName());
         List<Map<String, Object>> rows = query("MATCH (p1:Package)-[d:DEPENDS_ON]->(p2:Package) WHERE p1.fqn=$package RETURN p2, d.weight as weight",
             parameters).getRows();
-        assertThat(rows.size()).isEqualTo(1);
+        assertThat(rows).hasSize(1);
         Map<String, Object> row = rows.get(0);
         assertThat((PackageDescriptor) row.get("p2"), packageDescriptor(B.class.getPackage()));
-        assertThat(row.get("weight")).isEqualTo(1L);
+        assertThat(row).containsEntry("weight", 1L);
         parameters.put("package", B.class.getPackage()
             .getName());
         assertThat(query("MATCH (p1:Package)-[:DEPENDS_ON]->(p2:Package) WHERE p1.fqn=$package RETURN p2", parameters).getColumn("p2"),
-                hasItem(packageDescriptor(A.class.getPackage())));
+            hasItem(packageDescriptor(A.class.getPackage())));
         store.commitTransaction();
     }
 
@@ -131,7 +140,7 @@ class DependencyIT extends AbstractJavaPluginIT {
      * Verifies the concept "dependency:Artifact".
      *
      * @throws IOException
-     *             If the test fails.
+     *     If the test fails.
      */
     @Test
     void artifacts() throws Exception {
@@ -153,19 +162,18 @@ class DependencyIT extends AbstractJavaPluginIT {
         Map<String, Object> parameters = new HashMap<>();
         parameters.put("artifact", from);
         List<Map<String, Object>> rows = query(
-            "MATCH (a1:Artifact)-[dependsOn:DEPENDS_ON]->(a2:Artifact) WHERE a1.fqn=$artifact RETURN a2, dependsOn.weight as weight",
-            parameters).getRows();
-        assertThat(rows.size()).isEqualTo(1);
+            "MATCH (a1:Artifact)-[dependsOn:DEPENDS_ON]->(a2:Artifact) WHERE a1.fqn=$artifact RETURN a2, dependsOn.weight as weight", parameters).getRows();
+        assertThat(rows).hasSize(1);
         Map<String, Object> row = rows.get(0);
         assertThat((ArtifactFileDescriptor) row.get("a2"), artifactDescriptor(to));
-        assertThat(row.get("weight")).isEqualTo(1L);
+        assertThat(row).containsEntry("weight", 1L);
     }
 
     /**
      * Verifies the constraint "java:AvoidCyclicPackageDependencies".
      *
      * @throws IOException
-     *             If the test fails.
+     *     If the test fails.
      */
     @Test
     void packageCycles() throws Exception {
@@ -176,14 +184,14 @@ class DependencyIT extends AbstractJavaPluginIT {
         Result<Constraint> result = constraintViolations.get("java:AvoidCyclicPackageDependencies");
         assertThat(result).isNotNull();
         List<Row> rows = result.getRows();
-        assertThat(rows.size()).isEqualTo(2);
+        assertThat(rows).hasSize(2);
         for (Row row : rows) {
-            PackageDescriptor p = (PackageDescriptor) row.getColumns().get("Package").getValue();
-            assertThat(p.getFullQualifiedName())
-                .satisfiesAnyOf(
-                    arg -> assertThat(arg).isEqualTo(A.class.getPackage().getName()),
-                    arg -> assertThat(arg).isEqualTo(B.class.getPackage().getName())
-                );
+            PackageDescriptor p = (PackageDescriptor) row.getColumns()
+                .get("Package")
+                .getValue();
+            assertThat(p.getFullQualifiedName()).satisfiesAnyOf(arg -> assertThat(arg).isEqualTo(A.class.getPackage()
+                .getName()), arg -> assertThat(arg).isEqualTo(B.class.getPackage()
+                .getName()));
         }
         store.commitTransaction();
     }
@@ -192,7 +200,7 @@ class DependencyIT extends AbstractJavaPluginIT {
      * Verifies the constraint "java:AvoidCyclicArtifactDependencies".
      *
      * @throws IOException
-     *             If the test fails.
+     *     If the test fails.
      */
     @Test
     void artifactCycles() throws Exception {
@@ -200,7 +208,8 @@ class DependencyIT extends AbstractJavaPluginIT {
         scanClasses("b", B.class);
         assertThat(validateConstraint("java:AvoidCyclicArtifactDependencies").getStatus()).isEqualTo(FAILURE);
         store.beginTransaction();
-        Collection<Result<Constraint>> constraintViolations = reportPlugin.getConstraintResults().values();
+        Collection<Result<Constraint>> constraintViolations = reportPlugin.getConstraintResults()
+            .values();
         Matcher<Iterable<? super Result<Constraint>>> matcher = hasItem(result(constraint("java:AvoidCyclicArtifactDependencies")));
         assertThat(constraintViolations, matcher);
         store.commitTransaction();
