@@ -4,6 +4,7 @@
 == 2.3.0
 
 * Added concepts `java:TestClass`, `java:TestMethod`, `java:AssertMethod` and constraint `java:TestMethodWithoutAssertion`
+* Do not scan local variables by default (can be activated by setting scan property `java.include.local-variables` to `true`)
 * Added `Unknown` as default to list of java versions for concept `java:JavaVersion`
 
 == 2.1.0
